# de-indentification-contract

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml
examples/: ner_adapters_example.py
memory_bank/: design.md
scripts/: README_MODELS.md  download_models.py  test_model.py
src/contract_deid/: __init__.py  cli.py  config.py
src/contract_deid/anonymizers/: __init__.py  entity_library.py  faker_provider.py
src/contract_deid/core/: __init__.py  analyzer.py  consistency.py  llm_refine.py  ner_engine.py
src/contract_deid/core/ner_adapters/: __init__.py  base.py  llm_adapter.py  modelscope_adapter.py  paddlenlp_adapter.py
src/contract_deid/recognizers/: __init__.py  amount.py  bank_account.py  credit_code.py  id_card.py  phone.py
src/contract_deid/utils/: __init__.py  location_mapper.py  mapping_export.py
tests/: test_deidentification.py
